2019-1/231/users/4231/executions/1651_2711.log
== TEST (2019-04-11 19:33:10) 
-- CODE:
x = float(input("o valor que ele tem disponivel: ")
y = float(input("a quantidade de tickets do ru que ele deseja comprar: ")
z = float(input("o valor dos tickets: ")
h = float(input("a quantidade de passes de onibus: ")
q = float(input("o valor dos passes: ")
D = (y*z) + (h*q)
if (D<=x):
	print(.upper()"suficiente")
else:
	print(.lower()"insuficiente")
-- ERROR:
File "XXXX", line 2
    y = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:33:40) 
-- CODE:
x = float(input("o valor que ele tem disponivel: "))
y = float(input("a quantidade de tickets do ru que ele deseja comprar: "))
z = float(input("o valor dos tickets: "))
h = float(input("a quantidade de passes de onibus: "))
q = float(input("o valor dos passes: "))
D = (y*z) + (h*q)
if (D<=x):
	print(.upper()"suficiente")
else:
	print(.lower()"insuficiente")
-- ERROR:
File "XXXX", line 8
    print(.upper()"suficiente")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:34:16) 
-- CODE:
x = float(input("o valor que ele tem disponivel: "))
y = float(input("a quantidade de tickets do ru que ele deseja comprar: "))
z = float(input("o valor dos tickets: "))
h = float(input("a quantidade de passes de onibus: "))
q = float(input("o valor dos passes: "))
D = (y*z) + (h*q)
if (D<=x):
	print("SUCIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUCIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:34:27) 
-- CODE:
x = float(input("o valor que ele tem disponivel: "))
y = float(input("a quantidade de tickets do ru que ele deseja comprar: "))
z = float(input("o valor dos tickets: "))
h = float(input("a quantidade de passes de onibus: "))
q = float(input("o valor dos passes: "))
D = (y*z) + (h*q)
if (D<=x):
	print("SUCIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.209681
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUCIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:34:52) 
-- CODE:
x = float(input("o valor que ele tem disponivel: "))
y = int(input("a quantidade de tickets do ru que ele deseja comprar: "))
z = float(input("o valor dos tickets: "))
h = int(input("a quantidade de passes de onibus: "))
q = float(input("o valor dos passes: "))
D = (y*z) + (h*q)
if (D<=x):
	print("SUCIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUCIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:35:27) 
-- CODE:
x = float(input("o valor que ele tem disponivel: "))
y = int(input("a quantidade de tickets do ru que ele deseja comprar: "))
z = float(input("o valor dos tickets: "))
h = int(input("a quantidade de passes de onibus: "))
q = float(input("o valor dos passes: "))
D = (y*z) + (h*q)
if (D<=x):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.191211
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
